--- a/index.html
+++ b/index.html
@@ -22,14 +22,15 @@
 
     <nav class="navbar">
         <div class="logo">
-            <img src="logo.jpg" alt="Bulk Star Logo" class="logo-img">
+            <img src="star.png" alt="Bulk Star Logo" class="logo-img">
             <span>BULK</span>
         </div>
 
         <div class="nav-links">
-            <a href="#" id="docsBtn" class="active">Docs</a>
-            <a href="#" id="communityBtn">Community Arts</a>
-        </div>
+    <a href="#" id="docsBtn" class="active">Docs</a>
+    <a href="#" id="communityBtn">Community Arts</a>
+    <a href="#" id="memesBtn">Memes</a>
+</div>
 
         <div class="nav-action">
             <a href="https://discord.com/invite/bulk" target="_blank" class="btn-glass">
@@ -39,13 +40,13 @@
     </nav>
 
     <main class="hero">
-<main class="hero">
+
 
     <!-- NORMAL HERO CONTENT -->
     <div id="heroContent">
 
         <div class="hero-top-icon-container">
-            <img src="logo.jpg" alt="Hero Star" class="hero-main-star">
+            <img src="star.png" alt="Hero Star" class="hero-main-star">
         </div>
 
         <h1 class="hero-title">
@@ -115,12 +116,199 @@
     <a href="https://x.com/HassanWeb4" target="_blank">
         <img src="hassan.jpg">
     </a>
+    <a href="https://x.com/OMOMAHYORWAH" target="_blank">
+        <img src="ommo.jpg">
+    </a>
 
+    <a href="https://x.com/pawansolan44221" target="_blank">
+        <img src="pawansolan.jpg">
+    </a>
+
+    <a href="https://x.com/O_LEEGEND" target="_blank">
+        <img src="o_leegend.jpg">
+    </a>
+
+    <a href="https://x.com/Sadnoboy616" target="_blank">
+        <img src="sadnoboy.jpg">
+    </a>
+    <a href="https://x.com/0xmusty" target="_blank">
+        <img src="0xmusty.jpg">
+    </a>
+
+    <a href="https://x.com/kankaunglay" target="_blank">
+        <img src="kanka.jpg">
+    </a>
+
+    <a href="https://x.com/inwrld_" target="_blank">
+        <img src="inwrld.jpg">
+    </a>
+
+    <a href="https://x.com/YevhenEvgenikas" target="_blank">
+        <img src="yevhen.jpg">
+    </a>
+    <a href="https://x.com/ryuk6357" target="_blank">
+        <img src="ryuk.jpg">
+    </a>
+
+    <a href="https://x.com/kriptosameth" target="_blank">
+        <img src="ChatGPT Image 10 Şub 2026 18_53_26.png">
+    </a>
+
+    <a href="https://x.com/dimebag47031864" target="_blank">
+        <img src="dimebag.jpg">
+    </a>
+
+    <a href="https://x.com/shree_ju4444" target="_blank">
+        <img src="shree.jpg">
+    </a>
+    <a href="https://x.com/kriz_xyz" target="_blank">
+        <img src="kriz.jpg">
+    </a>
+
+    <a href="https://x.com/ZaYaC011" target="_blank">
+        <img src="zayac.jpg">
+    </a>
+
+    <a href="https://x.com/Archiinweb3" target="_blank">
+        <img src="arch.jpg">
+    </a>
+    <a href="https://x.com/rated_suave" target="_blank">
+        <img src="rated.png">
+    </a>
+    <a href="https://x.com/momotavrrr" target="_blank">
+        <img src="momo.png ">
+    </a>
+    <a href="https://x.com/mubashir_097" target="_blank">
+        <img src="mubashir.png">
+    </a>
+
+
+          </div>
+    </div>
+
+    <!-- MEMES GALLERY -->
+    <div id="memesGallery" class="community-gallery">
+        <div class="gallery-grid">
+            <div class="meme-card" data-id="meme1">
+    <div class="meme-item">
+        <img src="hassan memes.png">
+    </div>
+    <div class="meme-votes">
+        <span class="vote-count">0</span> votes
+    </div>
 </div>
+
+
+            <div class="meme-card" data-id="meme2">
+    <div class="meme-item">
+        <img src="yaorimemes.png">
+    </div>
+    <div class="meme-votes">
+        <span class="vote-count">0</span> votes
+    </div>
+</div>
+
+            <div class="meme-card" data-id="meme3">
+    <div class="meme-item">
+        <img src="tuyameme.png">
+    </div>
+    <div class="meme-votes">
+        <span class="vote-count">0</span> votes
+    </div>
+</div>
+
+
+            <div class="meme-card" data-id="meme4">
+    <div class="meme-item">
+        <img src="oggymeme.png">
+    </div>
+    <div class="meme-votes">
+        <span class="vote-count">0</span> votes
+    </div>
+</div>
+
+
+            <div class="meme-card" data-id="meme5">
+    <div class="meme-item">
+        <img src="taxmeme.png">
+    </div>
+    <div class="meme-votes">
+        <span class="vote-count">0</span> votes
+    </div>
+</div>
+
+
+            <div class="meme-card" data-id="meme6">
+    <div class="meme-item">
+        <img src="zebyn.png">
+    </div>
+    <div class="meme-votes">
+        <span class="vote-count">0</span> votes
+    </div>
+</div>
+
+
+            <div class="meme-card" data-id="meme7">
+    <div class="meme-item">
+        <img src="tuong.png">
+    </div>
+    <div class="meme-votes">
+        <span class="vote-count">0</span> votes
+    </div>
+</div>
+
+
+            <div class="meme-card" data-id="meme8">
+    <div class="meme-item">
+        <img src="oldi.png">
+    </div>
+    <div class="meme-votes">
+        <span class="vote-count">0</span> votes
+    </div>
+</div>
+
+
+            <div class="meme-card" data-id="meme9">
+    <div class="meme-item">
+        <img src="asif.png">
+    </div>
+    <div class="meme-votes">
+        <span class="vote-count">0</span> votes
+    </div>
+</div>
+
+
+            <div class="meme-card" data-id="meme10">
+    <div class="meme-item">
+        <img src="emmanuel.png">
+    </div>
+    <div class="meme-votes">
+        <span class="vote-count">0</span> votes
+    </div>
+</div>
+<div class="meme-card" data-id="meme11">
+    <div class="meme-item">
+        <img src="airdrop4.png">
+    </div>
+    <div class="meme-votes">
+        <span class="vote-count">0</span> votes
+    </div>
+</div>
+<div class="meme-card" data-id="meme12">
+    <div class="meme-item">
+        <img src="bulky.png">
+    </div>
+    <div class="meme-votes">
+        <span class="vote-count">0</span> votes
+    </div>
+</div>
+
+
+        </div>
+    </div>
 
 </main>
 
     <script src="script.js"></script>
 </body>
 </html>
-
