--- a/index.html
+++ b/index.html
@@ -189,118 +189,115 @@
     <!-- MEMES GALLERY -->
     <div id="memesGallery" class="community-gallery">
         <div class="gallery-grid">
+
             <div class="meme-card" data-id="meme1">
-    <div class="meme-item">
+    <div class="meme-item" onclick="vote('meme1')">
         <img src="hassan memes.png">
     </div>
-    <div class="meme-votes">
-        <span class="vote-count">0</span> votes
-    </div>
+    <div class="vote-count">0</div>
 </div>
+
+
 
 
             <div class="meme-card" data-id="meme2">
-    <div class="meme-item">
+    <div class="meme-item" onclick="vote('meme2')">
         <img src="yaorimemes.png">
     </div>
-    <div class="meme-votes">
-        <span class="vote-count">0</span> votes
-    </div>
+    <div class="vote-count">0</div>
 </div>
 
+
+
             <div class="meme-card" data-id="meme3">
-    <div class="meme-item">
+    <div class="meme-item" onclick="vote('meme3')">
         <img src="tuyameme.png">
     </div>
-    <div class="meme-votes">
-        <span class="vote-count">0</span> votes
-    </div>
+    <div class="vote-count">0</div>
 </div>
+
 
 
             <div class="meme-card" data-id="meme4">
-    <div class="meme-item">
+    <div class="meme-item" onclick="vote('meme4')">
         <img src="oggymeme.png">
     </div>
-    <div class="meme-votes">
-        <span class="vote-count">0</span> votes
-    </div>
+    <div class="vote-count">0</div>
 </div>
+
+
 
 
             <div class="meme-card" data-id="meme5">
-    <div class="meme-item">
+    <div class="meme-item" onclick="vote('meme5')">
         <img src="taxmeme.png">
     </div>
-    <div class="meme-votes">
-        <span class="vote-count">0</span> votes
-    </div>
+    <div class="vote-count">0</div>
 </div>
+
 
 
             <div class="meme-card" data-id="meme6">
-    <div class="meme-item">
+    <div class="meme-item" onclick="vote('meme6')">
         <img src="zebyn.png">
     </div>
-    <div class="meme-votes">
-        <span class="vote-count">0</span> votes
-    </div>
+    <div class="vote-count">0</div>
 </div>
+
+
 
 
             <div class="meme-card" data-id="meme7">
-    <div class="meme-item">
+    <div class="meme-item" onclick="vote('meme7')">
         <img src="tuong.png">
     </div>
-    <div class="meme-votes">
-        <span class="vote-count">0</span> votes
-    </div>
+    <div class="vote-count">0</div>
 </div>
+
 
 
             <div class="meme-card" data-id="meme8">
-    <div class="meme-item">
+    <div class="meme-item" onclick="vote('meme8')">
         <img src="oldi.png">
     </div>
-    <div class="meme-votes">
-        <span class="vote-count">0</span> votes
-    </div>
+    <div class="vote-count">0</div>
 </div>
+
+
 
 
             <div class="meme-card" data-id="meme9">
-    <div class="meme-item">
+    <div class="meme-item" onclick="vote('meme9')">
         <img src="asif.png">
     </div>
-    <div class="meme-votes">
-        <span class="vote-count">0</span> votes
-    </div>
+    <div class="vote-count">0</div>
 </div>
+
+
 
 
             <div class="meme-card" data-id="meme10">
-    <div class="meme-item">
+    <div class="meme-item" onclick="vote('meme10')">
         <img src="emmanuel.png">
     </div>
-    <div class="meme-votes">
-        <span class="vote-count">0</span> votes
-    </div>
+    <div class="vote-count">0</div>
 </div>
-<div class="meme-card" data-id="meme11">
-    <div class="meme-item">
+
+
+        <div class="meme-card" data-id="meme11">
+    <div class="meme-item" onclick="vote('meme11')">
         <img src="airdrop4.png">
     </div>
-    <div class="meme-votes">
-        <span class="vote-count">0</span> votes
-    </div>
+    <div class="vote-count">0</div>
 </div>
+
+
+
 <div class="meme-card" data-id="meme12">
-    <div class="meme-item">
+    <div class="meme-item" onclick="vote('meme12')">
         <img src="bulky.png">
     </div>
-    <div class="meme-votes">
-        <span class="vote-count">0</span> votes
-    </div>
+    <div class="vote-count">0</div>
 </div>
 
 
@@ -310,5 +307,6 @@
 </main>
 
     <script src="script.js"></script>
+    <script type="module" src="firebase-voting.js"></script>
 </body>
 </html>
